# main-backend

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: black.yml  isort.yml  lint.yml  mypy.yml  pylint.yml
alembic/: env.py
src/: __init__.py  api.py  database.py  main.py  settings.py
src/alembic/: __init__.py  env.py
src/alembic/versions/: 606296449c7c_initial_revision.py  610bfffa36a3_do_changes.py  bb1f3b6a61ff_fixes.py  f62d28d1df13_add_visible_column_to_posts.py
src/cache/: __init__.py  cache_provider.py  redis_provider.py
src/database/: __init__.py  sqlalchemy_init.py
src/database/models/: __init__.py  base.py  category.py  post.py  user.py  user_favorite_posts.py  user_profile_info.py
src/dependencies/: __init__.py
src/features/: __init__.py
src/features/categories/: __init__.py  actions.py  routers.py  schemas.py
src/features/posts/: __init__.py  actions.py  routes.py  schemas.py
src/infrastructure/: __init__.py
src/infrastructure/database/: __init__.py
src/infrastructure/database/models/: __init__.py  category.py  post.py  user.py  user_favorite_posts.py  user_profile_info.py
src/models/: __init__.py  address.py  base.py  category.py  post.py  user.py  user_favorite_posts.py  user_profile_info.py
src/my_minio/: __init__.py
src/my_redis/: __init__.py
src/redis/: __init__.py
src/security/: __init__.py
src/settings/: __init__.py  base_settings.py  database_settings.py  logging_settings.py  minio_settings.py  redis_settings.py  settings.py  sqlalchemy_settings.py
