[project]
name = "Ugly Gallery main-backend"
requires-python = ">=3.12"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
SQLAlchemy = "^2.0.28"
alembic = "^1.13.1"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
mypy = "^1.9.0"
python-dotenv = "^1.0.1"
ruff = "^0.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "TD003",
    "TD002",
    "FIX002",
    "RUF003",
    "RUF002",
    "D105",
    "ANN101",
]